# rainbow

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.py
.github/workflows/: python_package.yml
examples/: x64_pimpmyxor.py
examples/CortexM_AES/: cortexm_aes.py
examples/HW_analysis/: pin_compare.py  pin_fault.py  trezor.elf  trezor.hex
examples/OAES/: OAES_x86.py
examples/SecAESSTM32/: firmware.elf  go.py
examples/hacklu2009/: go.py
examples/ledger_ctf2/: draft.py  ledger_ctf2.py  ripped.py  ripped2.py
examples/pimp_my_xor/: pimp_my_xor  x64_pimpmyxor.py
rainbow/: __init__.py  color_functions.py  fault_models.py  leakage_models.py  rainbow.py  tracers.py
rainbow/devices/: __init__.py  stm32.py  stm32f215.pickle  stm32l4x1.pickle
rainbow/generics/: __init__.py  aarch64.py  arm.py  cortexm.py  m68k.py  x64.py  x86.py
rainbow/loaders/: __init__.py  cleloader.py  elfloader.py  hexloader.py  peloader.py
rainbow/utils/: __init__.py  color_functions.py  loaders.py  parse_svd.py
rainbow/utils/plot/: __init__.py  interface.py  plot.py  styles.css
tests/: test_devices.py  test_fault_models.py  test_generics.py  test_hook.py  test_leakage_models.py  test_loaders.py  test_mapping.py  test_tracers.py
