[project]
name = "donjon-rainbow"
version = "2.0"
authors = [
    {name = "Victor Servant", email = "yhql.gh@gmail.com"},
    {name = "Alexandre Iooss"},
    {name = "Ján Jančár"},
]
description = "Generic Unicorn tracer for side-channels and fault injection"
requires-python = ">=3.7"
dependencies = [
    "unicorn>=2.0.1",
    "capstone>=4.0.0",
    "cle>=9.2",
    "intelhex",
    "pygments",
    "numpy",
    "PyQt5",
    "archinfo"
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Emulators",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research"
]

[project.urls]
Homepage = "https://github.com/Ledger-Donjon/rainbow"
Issues = "https://github.com/Ledger-Donjon/rainbow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["OAES_variance.jpg"]

[tool.hatch.build.targets.wheel]
packages = ["rainbow"]
